--- a/web/list.html
+++ b/web/list.html
@@ -2,9 +2,9 @@
 	<head>
 		<title>list</title>
 	</head>
-	<body bgcolor="blue" text="red">
+	<body bgcolor="burlywood" text="red">
 	<h1 style=color:black;><b>LIST IN HTML</b></h1>
-	<h2 style=color:black;>UNORDEREd LIST<h2><hr>
+	<h2 style=color:black;>UNORDERED LIST<h2><hr>
 	<ul type="square"><li>MCA<li>BBA</ul>
 	<ul type="circle"><li>MCA<li>BBA</ul>
 	<h2 style=color:black;>ORDERED lIST</h2><hr>
